[KARAF-5123] Fix regression in repo-refresh Align a bit more the repository selection in repo-remove and repo-refresh.